// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`User Management drawer is closed by default 1`] = `
<body>
  <div>
    <div>
      <div
        aria-label="drawer-container"
        class="drawer closed width35"
        data-testid="drawer-open-false"
        id="drawer-container"
        role="dialog"
      >
        <div
          class="drawerContent display-none"
        >
          <div
            class="drawerHeader"
          >
            <button
              aria-label="Close drawer"
              class="closeButton"
              data-testid="close-drawer"
            >
              <svg
                aria-label="X icon indicating closure"
                class="usa-icon usa-icon--size-3"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
            <h2
              class="margin-0 padding-bottom-2"
              data-testid="drawer-title"
              id="drawer-title"
            />
            <div>
              <input
                class="usa-input searchField"
                data-testid="textInput"
                id="searchFieldTemplate"
                name="searchFieldTemplate"
                placeholder="Search"
                type="search"
                value=""
              />
            </div>
          </div>
          <div
            class="drawerBody"
          >
            <div
              class="margin-top-2"
            >
              No queries found.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`User Management drawer renders an error message if there is no subject data to display 1`] = `
<body>
  <div>
    <div>
      <div
        aria-label="drawer-container"
        class="drawer open width35"
        data-testid="drawer-open-true"
        id="drawer-container"
        role="dialog"
      >
        <div
          class="drawerContent display-block"
        >
          <div
            class="drawerHeader"
          >
            <button
              aria-label="Close drawer"
              class="closeButton"
              data-testid="close-drawer"
            >
              <svg
                aria-label="X icon indicating closure"
                class="usa-icon usa-icon--size-3"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
            <h2
              class="margin-0 padding-bottom-0"
              data-testid="drawer-title"
              id="drawer-title"
            >
              S.P.E.W.
            </h2>
            <h3
              class="subtitle"
            >
              Members
            </h3>
            <div>
              <input
                class="usa-input searchField"
                data-testid="textInput"
                id="searchFieldTemplate"
                name="searchFieldTemplate"
                placeholder="Search"
                type="search"
                value=""
              />
            </div>
          </div>
          <div
            class="drawerBody"
          >
            <div
              class="margin-top-2"
            >
              No users found.
            </div>
          </div>
        </div>
      </div>
      <div
        class="overlay"
      />
    </div>
  </div>
</body>
`;

exports[`User Management drawer renders the list of all available queries 1`] = `
<body>
  <div>
    <div>
      <div
        aria-label="drawer-container"
        class="drawer open width35"
        data-testid="drawer-open-true"
        id="drawer-container"
        role="dialog"
      >
        <div
          class="drawerContent display-block"
        >
          <div
            class="drawerHeader"
          >
            <button
              aria-label="Close drawer"
              class="closeButton"
              data-testid="close-drawer"
            >
              <svg
                aria-label="X icon indicating closure"
                class="usa-icon usa-icon--size-3"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
            <h2
              class="margin-0 padding-bottom-0"
              data-testid="drawer-title"
              id="drawer-title"
            >
              S.P.E.W.
            </h2>
            <h3
              class="subtitle"
            >
              Assigned queries
            </h3>
            <div>
              <input
                class="usa-input searchField"
                data-testid="textInput"
                id="searchFieldTemplate"
                name="searchFieldTemplate"
                placeholder="Search"
                type="search"
                value=""
              />
            </div>
          </div>
          <div
            class="drawerBody"
          >
            <ul
              aria-description="queries for S.P.E.W."
              class="usa-list--unstyled margin-top-2"
            >
              <li>
                <div
                  class="usa-checkbox margin-bottom-3 checkbox"
                  data-testid="checkbox"
                >
                  <input
                    checked=""
                    class="usa-checkbox__input"
                    id="q1"
                    name="Test Query 1"
                    type="checkbox"
                  />
                  <label
                    class="usa-checkbox__label"
                    for="q1"
                  >
                    Test Query 1
                  </label>
                </div>
              </li>
              <li>
                <div
                  class="usa-checkbox margin-bottom-3 checkbox"
                  data-testid="checkbox"
                >
                  <input
                    checked=""
                    class="usa-checkbox__input"
                    id="q2"
                    name="Test Query 2"
                    type="checkbox"
                  />
                  <label
                    class="usa-checkbox__label"
                    for="q2"
                  >
                    Test Query 2
                  </label>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="overlay"
      />
    </div>
  </div>
</body>
`;

exports[`User Management drawer renders the list of all available users 1`] = `
<body>
  <div>
    <div>
      <div
        aria-label="drawer-container"
        class="drawer open width35"
        data-testid="drawer-open-true"
        id="drawer-container"
        role="dialog"
      >
        <div
          class="drawerContent display-block"
        >
          <div
            class="drawerHeader"
          >
            <button
              aria-label="Close drawer"
              class="closeButton"
              data-testid="close-drawer"
            >
              <svg
                aria-label="X icon indicating closure"
                class="usa-icon usa-icon--size-3"
                focusable="false"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
            <h2
              class="margin-0 padding-bottom-0"
              data-testid="drawer-title"
              id="drawer-title"
            >
              S.P.E.W.
            </h2>
            <h3
              class="subtitle"
            >
              Members
            </h3>
            <div>
              <input
                class="usa-input searchField"
                data-testid="textInput"
                id="searchFieldTemplate"
                name="searchFieldTemplate"
                placeholder="Search"
                type="search"
                value=""
              />
            </div>
          </div>
          <div
            class="drawerBody"
          >
            <ul
              aria-description="members of S.P.E.W."
              class="usa-list--unstyled margin-top-2"
            >
              <li>
                <div
                  class="usa-checkbox margin-bottom-3 checkbox"
                  data-testid="checkbox"
                >
                  <input
                    class="usa-checkbox__input"
                    id="456"
                    name="lilypotter"
                    type="checkbox"
                  />
                  <label
                    class="usa-checkbox__label"
                    for="456"
                  >
                    Lily Potter
                  </label>
                </div>
              </li>
              <li>
                <div
                  class="usa-checkbox margin-bottom-3 checkbox"
                  data-testid="checkbox"
                >
                  <input
                    class="usa-checkbox__input"
                    id="789"
                    name="hermionegranger"
                    type="checkbox"
                  />
                  <label
                    class="usa-checkbox__label"
                    for="789"
                  >
                    Hermione Granger
                  </label>
                </div>
              </li>
              <li>
                <div
                  class="usa-checkbox margin-bottom-3 checkbox"
                  data-testid="checkbox"
                >
                  <input
                    class="usa-checkbox__input"
                    id="123"
                    name="harrypotter"
                    type="checkbox"
                  />
                  <label
                    class="usa-checkbox__label"
                    for="123"
                  >
                    Harry Potter
                  </label>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="overlay"
      />
    </div>
  </div>
</body>
`;
